Implemented variable mass

--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -7,7 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/master/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/test-continuous-control-variable-mass/run_my_environment_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -61,7 +61,7 @@
         "\n",
         "# Note the `git@github.com` syntax, which will fetch over SSH instead of\n",
         "# HTTP.\n",
-        "!git clone --branch master git@github.com:Tuxliri/RL_rocket.git\n",
+        "!git clone --branch test-continuous-control-variable-mass git@github.com:Tuxliri/RL_rocket.git\n",
         "\n",
         "!cd .."
       ]
@@ -119,7 +119,7 @@
         "from stable_baselines3.common.vec_env.dummy_vec_env import DummyVecEnv\n",
         "\n",
         "import my_environment\n",
-        "from my_environment.wrappers.wrappers import DiscreteActions3DOF, RecordVideoFigure, RewardAnnealing\n",
+        "from my_environment.wrappers.wrappers import RecordVideoFigure, RewardAnnealing\n",
         "from gym.wrappers import TimeLimit\n"
       ]
     },
@@ -168,8 +168,8 @@
         "    \"timestep\" : 0.05,\n",
         "    \"max_time\" : 40,\n",
         "    \"RANDOM_SEED\" : 42,\n",
-        "    \"initial_conditions\" : [50, 500, np.pi/2, 0, -50, 0],\n",
-        "    \"initial_conditions_range\" : [5,50,0,0,0,0],\n",
+        "    \"initial_conditions\" : [50, 500, np.pi/2, 0, -50, 0, 50e3],\n",
+        "    \"initial_conditions_range\" : [5,50,0,0,0,0,1e3],\n",
         "    \"reward_coefficients\" : {\n",
         "                            \"alfa\" : -0.01, \n",
         "                            \"beta\" : -1e-8,\n",
