Changed initial conditions

--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -166,9 +166,9 @@
         "    \"policy_type\": \"MlpPolicy\",\n",
         "    \"total_timesteps\": int(1e6),\n",
         "    \"timestep\" : 0.05,\n",
-        "    \"max_time\" : 40,\n",
+        "    \"max_time\" : 100,\n",
         "    \"RANDOM_SEED\" : 42,\n",
-        "    \"initial_conditions\" : [50, 500, np.pi/2, 0, -50, 0],\n",
+        "    \"initial_conditions\" : [-1600, 2000, np.pi*3/4, 180, -90, 0],\n",
         "    \"initial_conditions_range\" : [5,50,0,0,0,0],\n",
         "    \"reward_coefficients\" : {\n",
         "                            \"alfa\" : -0.01, \n",
