--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -279,7 +279,7 @@
         "    seed=config[\"RANDOM_SEED\"]\n",
         "    )\n",
         "    # Anneal the reward (remove v_targ following reward)\n",
-        "    env = RewardAnnealing(env)\n",
+        "    env = RewardAnnealing(env, thrust_penalty = 0.004)\n",
         "\n",
         "    # Define a new custom action space with only three actions:\n",
         "    # - no thrust\n",
@@ -331,7 +331,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.7.12 ('beginnersPPO')",
+      "display_name": "Python 3.7.13 ('thesis_env')",
       "language": "python",
       "name": "python3"
     },
@@ -345,11 +345,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.12"
+      "version": "3.7.13"
     },
     "vscode": {
       "interpreter": {
-        "hash": "6bb16cade9d36141ae9213d884fb1ae293e1d9fda2be68716a113c15fbf181a7"
+        "hash": "cb2bed79003d04db150c2bac0cc69c4a81f9badb372e6d411ccf76fa514c45a4"
       }
     }
   },
