--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -168,14 +168,15 @@
         "    \"timestep\" : 0.05,\n",
         "    \"max_time\" : 100,\n",
         "    \"RANDOM_SEED\" : 42,\n",
-        "    \"initial_conditions\" : [-1600, 2000, np.pi*3/4, 180, -90, 0],\n",
-        "    \"initial_conditions_range\" : [5,50,0,0,0,0],\n",
+        "    \"initial_conditions\" : [-1600, 2000, np.pi*3/4, 180, -90, 0, 50e3],\n",
+        "    \"initial_conditions_range\" : [5,50,0,0,0,0,1e3],\n",
         "    \"reward_coefficients\" : {\n",
         "                            \"alfa\" : -0.01, \n",
         "                            \"beta\" : -1e-8,\n",
         "                            \"eta\" : 0.2,\n",
         "                            \"gamma\" : -10,\n",
-        "                            \"delta\" : -5\n",
+        "                            \"delta\" : -5,\n",
+        "                            \"xi\" : 0.004\n",
         "                            },\n",
         "    \"eval_freq\" : 50e3,\n",
         "}\n",
@@ -234,7 +235,7 @@
         "    ent_coef=0.01,\n",
         "    )\n",
         "\n",
-        "def make_eval_env():\n",
+        "def make_eval_env(training_env = env):\n",
         "        training_env = make_env()\n",
         "        return RecordVideoFigure(training_env, video_folder=f\"videos/{run.id}\",\n",
         "        image_folder=f\"images/{run.id}\", episode_trigger= lambda x: x%5==0 )\n",
