Added code saving

--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -188,7 +188,8 @@
         "    config=config,\n",
         "    sync_tensorboard=True,  # auto-upload sb3's tensorboard metrics\n",
         "    monitor_gym=True,  # auto-upload the videos of agents playing the game\n",
-        "    save_code=True,  # optional\n",
+        "    save_code=True,  # optional,\n",
+        "    settings=wandb.Settings(code_dir='/content/RL_rocket'),\n",
         ")\n",
         "\n",
         "def make_env():\n",
