--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -135,13 +135,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OZh-0qjN6l8B"
-      },
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "0whknuJU6tIm"
       },
       "source": [
@@ -176,7 +169,8 @@
         "                            \"eta\" : 0.2,\n",
         "                            \"gamma\" : -10,\n",
         "                            \"delta\" : -5,\n",
-        "                            \"xi\" : 0.004\n",
+        "                            \"xi\" : 0.004,\n",
+        "                            \"kappa\" : 10,\n",
         "                            },\n",
         "    \"eval_freq\" : 50e3,\n",
         "}\n",
