--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -17,59 +17,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "8bgoqZRSz3FQ",
-        "outputId": "7c1ea9f6-b713-4929-ce32-24f7a6d3acf0"
-      },
-      "outputs": [],
-      "source": [
-        "!cat ~/.ssh/id_ed25519.pub\n",
-        "PUB_KEY = \"ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIKRCMs6GPJ5kNi/fNVNf8Ki/QNwHS494mwuysriErNVs root@ac3a85e94cb7\""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "nfW46krWzr4G"
-      },
-      "source": [
-        "PRIVATE KEY:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "I4Uab7q5v8nS",
         "outputId": "910381f2-da16-439f-981b-78d388002cae"
       },
       "outputs": [],
       "source": [
-        "GITHUB_PRIVATE_KEY = \"\"\"-----BEGIN OPENSSH PRIVATE KEY-----\n",
-        "b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAMwAAAAtzc2gtZW\n",
-        "QyNTUxOQAAACCkQjLOhjyeZDYv3zVTX/Cov0DcB0uPeJsLsrK4hKzVbAAAAJhh7cU0Ye3F\n",
-        "NAAAAAtzc2gtZWQyNTUxOQAAACCkQjLOhjyeZDYv3zVTX/Cov0DcB0uPeJsLsrK4hKzVbA\n",
-        "AAAEDN2iiEa8wQ9vr1YZa/Db3A25rqlIJmgS5/JHXuCZNpeqRCMs6GPJ5kNi/fNVNf8Ki/\n",
-        "QNwHS494mwuysriErNVsAAAAEXJvb3RAYWMzYTg1ZTk0Y2I3AQIDBA==\n",
-        "-----END OPENSSH PRIVATE KEY-----\n",
-        "\"\"\"\n",
-        "\n",
-        "# Create the directory if it doesn't exist.\n",
-        "! mkdir -p /root/.ssh\n",
-        "# Write the key\n",
-        "with open(\"/root/.ssh/id_ed25519\", \"w\") as f:\n",
-        "  f.write(GITHUB_PRIVATE_KEY)\n",
-        "# Add github.com to our known hosts\n",
-        "!ssh-keyscan -t ed25519 github.com >> ~/.ssh/known_hosts\n",
-        "\n",
-        "# Restrict the key permissions, or else SSH will complain.\n",
-        "!chmod go-rwx /root/.ssh/id_ed25519\n",
-        "\n",
-        "# Note the `git@github.com` syntax, which will fetch over SSH instead of\n",
-        "# HTTP.\n",
-        "!git clone --branch master git@github.com:Tuxliri/RL_rocket.git\n",
+        "!git clone --branch master https://github.com/Tuxliri/RL_rocket.git\n",
         "\n",
         "!cd .."
       ]
