Tweaked reward coefficients and eval frequency

--- a/run_my_environment_colab.ipynb
+++ b/run_my_environment_colab.ipynb
@@ -139,18 +139,17 @@
         "    \"initial_conditions_range\" : [5,50,0,0,0,0,1e3],\n",
         "    \"reward_coefficients\" : {\n",
         "                            \"alfa\" : -0.01, \n",
-        "                            \"beta\" : -1e-8,\n",
+        "                            \"beta\" : 0,\n",
         "                            \"eta\" : 0,\n",
         "                            \"gamma\" : -10,\n",
         "                            \"delta\" : -5,\n",
         "                            \"xi\" : 0.004,\n",
         "                            \"kappa\" : 10,\n",
         "                            },\n",
-        "    \"eval_freq\" : 50e3,\n",
         "}\n",
         "\n",
         "config[\"max_ep_timesteps\"] = int(config[\"max_time\"]/config[\"timestep\"])\n",
-        "\n",
+        "config[\"eval_freq\"] = int(config[\"total_timesteps\"]/20)\n",
         "run = wandb.init(\n",
         "    project=\"RL_rocket\",\n",
         "    config=config,\n",
