Added back entropy coefficient

--- a/run_colab.ipynb
+++ b/run_colab.ipynb
@@ -205,6 +205,7 @@
         "    tensorboard_log=f\"runs/{run.id}\",\n",
         "    verbose=1,\n",
         "    seed=config[\"RANDOM_SEED\"],\n",
+        "    ent_coef=0.01,\n",
         "    )\n",
         "\n",
         "def make_eval_env(training_env = env):\n",
