Modified reward function waypoints and radius
* Fixed a bug were the waypoint was not set correctly
* Externalized values of waypoint and landing radius

--- a/run_colab.ipynb
+++ b/run_colab.ipynb
@@ -145,6 +145,8 @@
         "                            \"gamma\" : -10,\n",
         "                            \"kappa\" : 10,\n",
         "                            \"xi\" : 0.004,\n",
+        "                            \"waypoint\" : 30,\n",
+        "                            \"landing_radius\" : 30\n",
         "                            },\n",
         "}\n",
         "\n",
