Improved code logging

--- a/run_colab.ipynb
+++ b/run_colab.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/master/run_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -14,11 +14,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "I4Uab7q5v8nS",
-        "outputId": "910381f2-da16-439f-981b-78d388002cae"
+        "id": "I4Uab7q5v8nS"
       },
       "outputs": [],
       "source": [
@@ -31,11 +27,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "sWzlYmiY141N",
-        "outputId": "bddf14e5-3dcf-4950-eb8f-c1e01483edf1"
+        "id": "sWzlYmiY141N"
       },
       "outputs": [],
       "source": [
@@ -60,11 +52,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Sb-HCUk1v2KO",
-        "outputId": "0e05e7a6-7923-4695-910e-e188d94bd3ef"
+        "id": "Sb-HCUk1v2KO"
       },
       "outputs": [],
       "source": [
@@ -116,12 +104,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
-        },
-        "id": "_MC0kpJp6Yuf",
-        "outputId": "64d24985-0b98-43e1-d02d-f18fd9dd47c8"
+        "id": "_MC0kpJp6Yuf"
       },
       "outputs": [],
       "source": [
@@ -152,13 +135,12 @@
         "\n",
         "config[\"max_ep_timesteps\"] = int(config[\"max_time\"]/config[\"timestep\"])\n",
         "config[\"eval_freq\"] = int(config[\"total_timesteps\"]/20)\n",
+        "\n",
         "run = wandb.init(\n",
         "    project=\"RL_rocket\",\n",
         "    config=config,\n",
         "    sync_tensorboard=True,  # auto-upload sb3's tensorboard metrics\n",
         "    monitor_gym=True,  # auto-upload the videos of agents playing the game\n",
-        "    save_code=True,  # optional,\n",
-        "    settings=wandb.Settings(code_dir='/content/RL_rocket'),\n",
         ")\n",
         "\n",
         "def make_env():\n",
@@ -189,14 +171,20 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "wandb.run.log_code(root = '/content/RL_rocket/my_environment', name = 'environment')"
+      ],
+      "metadata": {
+        "id": "WVl1xBs6156_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 436
-        },
-        "id": "oZ1ZGrab6TJh",
-        "outputId": "18c22a23-bdfc-448e-d8a1-b645e9fe91ec"
+        "id": "oZ1ZGrab6TJh"
       },
       "outputs": [],
       "source": [
@@ -303,9 +291,9 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
-      "include_colab_link": true,
       "name": "run_my_environment.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3.7.13 ('thesis_env')",
