Initial colab support

--- a/run_colab_6DOF.ipynb
+++ b/run_colab_6DOF.ipynb
@@ -51,28 +51,9 @@
       },
       "outputs": [],
       "source": [
-        "from datetime import datetime\n",
-        "from genericpath import exists\n",
+        "from main_6DOF import main\n",
         "\n",
-        "import os\n",
-        "import sys\n",
-        "import gym\n",
-        "import wandb\n",
-        "import numpy as np\n",
-        "import stable_baselines3\n",
-        "\n",
-        "from stable_baselines3 import PPO\n",
-        "from tensorboard import program\n",
-        "from stable_baselines3.common.callbacks import EvalCallback\n",
-        "from stable_baselines3.common.monitor import Monitor\n",
-        "from stable_baselines3.common.env_util import make_vec_env\n",
-        "from stable_baselines3.common.utils import set_random_seed\n",
-        "from wandb.integration.sb3 import WandbCallback\n",
-        "from stable_baselines3.common.vec_env.dummy_vec_env import DummyVecEnv\n",
-        "\n",
-        "import my_environment\n",
-        "from my_environment.wrappers.wrappers import RecordVideoFigure, RewardAnnealing\n",
-        "from gym.wrappers import TimeLimit\n"
+        "main()"
       ]
     },
     {
