--- a/run_colab.ipynb
+++ b/run_colab.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Tuxliri/RL_rocket/blob/master/run_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -18,7 +18,7 @@
       },
       "outputs": [],
       "source": [
-        "!git clone --branch master https://github.com/Tuxliri/RL_rocket.git\n",
+        "!git clone --branch ZEM-ZEV-reward https://github.com/Tuxliri/RL_rocket.git\n",
         "\n",
         "!cd .."
       ]
@@ -171,14 +171,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "wandb.run.log_code(root = '/content/RL_rocket/my_environment', name = 'environment')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "WVl1xBs6156_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "wandb.run.log_code(root = '/content/RL_rocket/my_environment', name = 'environment')"
+      ]
     },
     {
       "cell_type": "code",
@@ -291,9 +291,9 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
+      "include_colab_link": true,
       "name": "run_my_environment.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3.7.13 ('thesis_env')",
