Tweaked reward coefficients

--- a/run_colab.ipynb
+++ b/run_colab.ipynb
@@ -122,14 +122,14 @@
         "    \"initial_conditions_range\" : [5,50,0,0,0,0,1e3],\n",
         "    \"reward_coefficients\" : {\n",
         "                            \"alfa\" : -0.01, \n",
-        "                            \"beta\" : 0,\n",
+        "                            \"beta\" : -1e-8,\n",
         "                            \"delta\" : -5,\n",
-        "                            \"eta\" : 0.2,\n",
+        "                            \"eta\" : 0.02,\n",
         "                            \"gamma\" : -10,\n",
         "                            \"kappa\" : 10,\n",
         "                            \"xi\" : 0.004,\n",
         "                            \"waypoint\" : 30,\n",
-        "                            \"landing_radius\" : 30\n",
+        "                            \"landing_radius\" : 50\n",
         "                            },\n",
         "}\n",
         "\n",
